# little_3d_mmo_thing

./: .clang-format  .clangd  .gitignore  1.model_loading.fs  1.model_loading.fs1  1.model_loading.vs  3d_sky_box.fs  3d_sky_box.vs  CMakeLists.txt  README.md  basic_model.fs  basic_model.vs  basic_model_instanced.vs  common.h  debug.fs  debug.vs  doodad.txt  foliage_instanced.vs  fshader.fsha  glad.cpp  globber.py  ground_plane.tesc  ground_plane.tese  ideas.txt  light_baking_shader.fs  main.cpp  meson.build  pp_shader.fs  rebuild.bat  simple_shader.cpp  simple_shader.h  vcpkg.json  vshader.vsha  world_mesh.fs  world_mesh.vs  x86_64-clang.txt
data/: az_deadmines_c.mtl  blackrock_lower_instance.mtl  duskwoodchapel.mtl  valgarde_70gw.mtl
data/generic/human/passivedoodads/gypsywagons/: stormwindgypsywagon01.mtl
data/playe_models/: D0510041.max  result.mtl
headers/: window.h
headers/base_engine/: camera.h  mesh.h  model.h  shader.h  vertex.h
headers/base_engine/core/: datatypes.h  draw_data_buffer.h
headers/base_engine/core/mem/: falloc.h  galloc.h  poly_buf.h
headers/base_engine/debug/: debug_menu.h  debug_overlay.h  text_edit.h
headers/base_engine/input/: keyboard.h
headers/base_engine/mem/: stack_vec.h
headers/base_engine/physics_system/: base_shapes.h  bbox.h  chull.h  intersect.h  mesh_chunking.h  mesh_collider.h
headers/base_engine/renderer/: camera.h  game_renderer.h  image_texture.h  instanced_model.h  mesh.h  model.h  model_renderer.h  shader.h  static_render_model.h  static_world_model.h
headers/base_engine/renderer/core/: base_texture.h  draw_buffer.h  frame_buffer.h  gl_type_translations.h  image_texture.h  lod.h  math.h  octree.h  pipeline.h  render_pipeline.h  shader.h  ssbos.h  tex_atlas.h  vertex_buffer.h
headers/base_engine/renderer/lighting_system/: baked_light.h
headers/base_engine/renderer/render_primitives/: bbox.h
headers/base_engine/scripting/: script_handler.h  scripting_api.h
headers/base_engine/utils/: fnv1a.h  zip.h
headers/base_engine/world_generation/: 3dnoise.h  foliage_rule_api.h  ground_chunk.h  ground_chunking.h  ground_mesh.h  ground_plane.h
headers/logging/: easylogging++.h
include/: FastNoise.h  stb_dxt.h  stb_image_resize.h  stb_rect_pack.h
include/MC/: mc.h
include/SimplexNoise/: SimplexNoise.h
include/glad/: glad.h
include/vhacd/: VHACD.h  wavefront.cpp  wavefront.h
include/wren/: wren.hpp
scripts/: terrain.wren  texturing.wren
scripts/corelib/: dbglib.wren  noiselib.wren
shaders/: basic_model.fs  basic_model.vs  basic_model_instanced.fs  basic_model_instanced.vs  ground_plane.tesc  ground_plane.tese  light_baking_shader.vs  pp_shader.vs  world_mesh.fs  world_mesh.vs
src/: SimplexNoise.cpp  easylogging++.cc  stb_dxt.cpp  stb_rect_pack.cpp
src/base_engine/debug/: debug_menu.cpp
src/base_engine/input/: keyboard.cpp
src/base_engine/physics_system/: chull.cpp  mesh_chunking.cpp  mesh_collider.cpp
src/base_engine/renderer/: game_renderer.cpp  mesh.cpp  model.cpp  shader.cpp  static_render_model.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_texteditor.cpp  imgui_widgets.cpp
src/wren/vm/: wren_compiler.h  wren_opt_meta.h  wren_opt_random.c  wren_opt_random.h  wren_utils.h  wren_value.c  wren_vm.c  wren_vm.h
